--- a/runners-k8s.toml
+++ b/runners-k8s.toml
@@ -2,7 +2,7 @@
 # Connection is in Go pq driver format:
 # host=<host> port=<port> user=<databaseUser> password=<databaseUserPassword> dbname=<databaseName>
 [database]
-connection_string = "host=localhost port=5432 user=postgres password=postgres dbname=marathon_db sslmode=disable"
+connection_string = "host=192.168.100.32 port=5432 user=postgres password=postgres dbname=marathon_db sslmode=disable"
 max_idle_connections = 5
 max_open_connections = 20
 connection_max_lifetime = "60s"
