--- a/kubernetes/marathon-app-service.yaml
+++ b/kubernetes/marathon-app-service.yaml
@@ -2,12 +2,19 @@ apiVersion: v1
 kind: Service
 metadata:
   name: marathon-app-service
+  labels:
+    app: marathon-service-api
+    job: marathon-go-api
 spec:
   selector:
     app: marathon-app
   type: LoadBalancer
   ports:
-  - port: 8080
-    name: http
-    protocol: TCP
-    targetPort: 8080
+    - port: 8080
+      name: http
+      protocol: TCP
+      targetPort: 8080
+    - port: 9000
+      name: http-metrics
+      protocol: TCP
+      targetPort: 9000
